--- a/index.html
+++ b/index.html
@@ -5,14 +5,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
-
+  <title>Apple watch landing page</title>
+  <!-- Fonts  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+  <header class="site-header">
+    <div class="container header-container">
+      <a class="site-logo-link" href="#">
+        <img width="35" height="42" class="site-logo-img" src="imgs/apple-logo.svg" alt="site-logo">
+      </a>
+      <nav>
+        <ul class="site-nav">
+          <li class="site-nav-item">
+            <a class="site-nav-item-link" href="#">Home</a>
+          </li>
+          <li class="site-nav-item">
+            <a class="site-nav-item-link" href="#">About</a>
+          </li>
+          <li class="site-nav-item">
+            <a class="site-nav-item-link" href="#">Offers</a>
+          </li>
+          <li class="site-nav-item">
+            <a class="site-nav-item-link" href="#">Services</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="aid-department" href="#">How can we help you?</a>
+    </div>
+  </header>
 
 
   <script src="js/main.js"></script>
