Add take control styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav>
         <ul class="site-nav">
           <li class="site-nav-item">
-            <a class="site-nav-item-link" href="#">Home</a>
+            <a class="site-nav-item-link active" href="#">Home</a>
           </li>
           <li class="site-nav-item">
             <a class="site-nav-item-link" href="#">About</a>
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </nav>
-      <input class="aid-department" type="text" placeholder="How can we help you?"></input>
+      <input class="aid-department" type="text" placeholder="How can we help you?">
     </div>
   </header>
 
