--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- Stylesheets -->
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
-  <link rel="stylesheet" href="css/styles.min.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
 </head>
 
 <body>
+  <!-- SITE-HEADER  -->
   <header class="site-header">
     <div class="container header-container">
       <a class="site-logo-link" href="#">
@@ -25,7 +26,7 @@
       <nav>
         <ul class="site-nav">
           <li class="site-nav-item">
-            <a class="site-nav-item-link active" href="#">Home</a>
+            <a class="site-nav-item-link" href="#">Home</a>
           </li>
           <li class="site-nav-item">
             <a class="site-nav-item-link" href="#">About</a>
@@ -38,10 +39,14 @@
           </li>
         </ul>
       </nav>
-      <input class="aid-department" type="text" placeholder="How can we help you?">
+      <form action="https://echo.htmlacademy.ru" method="get">
+        <input class="aid-department" type="search" name="search" aria-label="Search"
+          placeholder="How can we help you?">
+      </form>
     </div>
   </header>
 
+  <!-- MAIN-CONTENT  -->
   <main class="main-content">
     <section class="intro">
       <div class="container intro-container">
@@ -83,10 +88,7 @@
           <h3 class="features-heading">Just do it. Sunday.</h3>
           <p class="features-text">Run every Sunday and see how long you can keep your streak alive. Fuel your run with
             exclusive Nike+ Run Club playlists on Apple Music.</p>
-          <div class="features-button-box">
-            <span class="features-button-hr"></span>
-            <a class="features-button" href="#">Learn more</a>
-          </div>
+          <a class="features-button" href="#">Learn more</a>
         </div>
       </div>
     </section>
