--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> -->
   <!-- Stylesheets -->
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
-  <link rel="stylesheet" href="css/styles.min.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
 </head>
 
 <body>
@@ -110,13 +110,16 @@
     </section>
 
     <section class="take-control">
-      <div class="container take-control-container">
-        <div class="site-content">
-          <h2 class="site-content-heading">Take control of your health. </h2>
-          <p class="site-content-text">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help
-            you take your run to the next level. You can even pair your watch wirelessly with compatible gym equipment.
-            And it’s swimproof, so you can take a post-run dip in the pool.</p>
-          <a class="take-control-button button" href="#">Explore features</a>
+      <div class="take-control-wrapper">
+        <div class="container take-control-container">
+          <div class="site-content">
+            <h2 class="site-content-heading">Take control of your health. </h2>
+            <p class="site-content-text">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help
+              you take your run to the next level. You can even pair your watch wirelessly with compatible gym
+              equipment.
+              And it’s swimproof, so you can take a post-run dip in the pool.</p>
+            <a class="take-control-button button" href="#">Explore features</a>
+          </div>
         </div>
       </div>
     </section>
