--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apple watch landing page</title>
-  <!-- Fonts  -->
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> -->
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -21,10 +17,9 @@
   <header class="site-header">
     <div class="container header-container">
       <a class="site-logo-link" href="#">
-        <img width="35" height="42" class="site-logo-img" src="imgs/apple-logo.svg" alt="site-logo">
+        <img class="site-logo-img" src="imgs/apple-logo.svg" alt="site-logo" width="35" height="42" >
       </a>
-      <nav>
-        <ul class="site-nav">
+      <ul class="site-nav-list">
           <li class="site-nav-item">
             <a class="site-nav-item-link" href="#">Home</a>
           </li>
@@ -37,36 +32,33 @@
           <li class="site-nav-item">
             <a class="site-nav-item-link" href="#">Services</a>
           </li>
-        </ul>
-      </nav>
-      <form action="https://echo.htmlacademy.ru" method="get">
-        <input class="aid-department" type="search" name="search" aria-label="Search"
-          placeholder="How can we help you?">
+      </ul>
+      <form class="header-form" action="https://echo.htmlacademy.ru" method="get">
+        <input class="aid-department" type="search" name="search" placeholder="How can we help you?" aria-label="Search">
       </form>
     </div>
   </header>
-
   <!-- MAIN-CONTENT  -->
   <main class="main-content">
+    <h1 class="visually-hidden">Apple watch landing page</h1>
+    <!-- INTRO -->
     <section class="intro">
       <div class="container intro-container">
         <div class="site-content">
           <h2 class="site-content-heading">Freedom calls.</h2>
           <p class="site-content-text">Answer a call from your surfboard. Ask Siri to send a message. Stream your
-            favorite songs on your run. And do it all while leaving your phone behind. Introducing Apple Watch Series 3
-            with cellular. Now you have the freedom to go with just your watch.</p>
+            favorite songs on your run. And do it all while leaving your phone behind. Introducing Apple Watch Series 3 with cellular. Now you have the freedom to go with just your watch.</p>
           <a class="intro-button button" href="#">Watch the keynote</a>
         </div>
       </div>
     </section>
-
+    <!-- FEATURES -->
     <section class="features">
+      <h2 class="visually-hidden">Features</h2>
       <div class="container features-container">
         <div class="features-box">
           <h3 class="features-heading">Know your runs. In and out.</h3>
-          <p class="features-text">Train smarter with more in-run stats. Want to compare a run to your last five? Just
-            swipe left. Mark splits by selecting pause or using gestures, like tapping the screen or double-clicking the
-            side button. And get a full post-run report, including elevation.</p>
+          <p class="features-text">Train smarter with more in-run stats. Want to compare a run to your last five? Just swipe left. Mark splits by selecting pause or using gestures, like tapping the screen or double-clicking the side button. And get a full post-run report, including elevation.</p>
           <div class="dots-devider">
             <span class="dots-devider-item"></span>
             <span class="dots-devider-item"></span>
@@ -75,9 +67,7 @@
         </div>
         <div class="features-box">
           <h3 class="features-heading">Run in good spirits.</h3>
-          <p class="features-text">A little support can go a long way. You can receive encouraging emoji from friends.
-            And reminders triggered by your friends’ shared activity, the current weather, or your own history give you
-            every reason to run.</p>
+          <p class="features-text">A little support can go a long way. You can receive encouraging emoji from friends.And reminders triggered by your friends’ shared activity, the current weather, or your own history give you every reason to run.</p>
           <div class="dots-devider">
             <span class="dots-devider-item"></span>
             <span class="dots-devider-item"></span>
@@ -86,47 +76,39 @@
         </div>
         <div class="features-box">
           <h3 class="features-heading">Just do it. Sunday.</h3>
-          <p class="features-text">Run every Sunday and see how long you can keep your streak alive. Fuel your run with
-            exclusive Nike+ Run Club playlists on Apple Music.</p>
+          <p class="features-text">Run every Sunday and see how long you can keep your streak alive. Fuel your run with exclusive Nike+ Run Club playlists on Apple Music.</p>
           <a class="features-button" href="#">Learn more</a>
         </div>
       </div>
     </section>
-
+    <!-- INFO -->
     <section class="info">
       <div class="container info-container">
         <div class="site-content">
-          <h2 class="site-content-heading">Nike Sport Band.
-            Light. Flexible.
-            Breathable.</h2>
+          <h2 class="site-content-heading">Nike Sport Band.Light. Flexible.Breathable.</h2>
           <p class="site-content-text">Made from the same durable, lightweight fluoroelastomer as the original Apple
             Watch Sport Band, the Nike Sport Band reduces weight and improves ventilation via row after row of
             compression-molded perforations.</p>
           <a class="info-button button" href="#">Buy now</a>
         </div>
-        <img width="400" height="600" class="info-img" src="imgs/watch-in-hand.jpg"
-          srcset="imgs/watch-in-hand.jpg 1x, imgs/watch-in-hand@2x.jpg 2x" alt="watch-in-hand">
+        <img class="info-img" src="imgs/watch-in-hand.jpg" alt="watch-in-hand" width="400" height="600"
+          srcset="imgs/watch-in-hand.jpg 1x, imgs/watch-in-hand@2x.jpg 2x" >
       </div>
     </section>
-
+    <!-- TAKE-CONTROL -->
     <section class="take-control">
       <div class="take-control-wrapper">
         <div class="container take-control-container">
           <div class="site-content">
             <h2 class="site-content-heading">Take control of your health. </h2>
-            <p class="site-content-text">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help
-              you take your run to the next level. You can even pair your watch wirelessly with compatible gym
-              equipment.
-              And it’s swimproof, so you can take a post-run dip in the pool.</p>
+            <p class="site-content-text take-control-content-text">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help you take your run to the next level. You can even pair your watch wirelessly with compatible gymequipment.And it’s swimproof, so you can take a post-run dip in the pool.</p>
             <a class="take-control-button button" href="#">Explore features</a>
           </div>
         </div>
       </div>
     </section>
   </main>
-
-
-  <script src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 
 </html>
