Add site-header BEM technology

--- a/index.html
+++ b/index.html
@@ -15,26 +15,28 @@
 <body>
   <!-- SITE-HEADER  -->
   <header class="site-header">
-    <div class="container header-container">
-      <a class="site-logo-link" href="#">
-        <img class="site-logo-img" src="imgs/apple-logo.svg" alt="site-logo" width="35" height="42" >
+    <div class="container site-header__container">
+      <a class="site-header__logo logo" href="#">
+        <img class="logo__img" src="imgs/apple-logo.svg" alt="site-logo" width="35" height="42" >
       </a>
-      <ul class="site-nav-list">
-          <li class="site-nav-item">
-            <a class="site-nav-item-link" href="#">Home</a>
+      <nav class="site-header__sitenav sitenav">
+        <ul class="sitenav__list">
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#" >Home</a>
           </li>
-          <li class="site-nav-item">
-            <a class="site-nav-item-link" href="#">About</a>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#" >About</a>
           </li>
-          <li class="site-nav-item">
-            <a class="site-nav-item-link" href="#">Offers</a>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#" >Offers</a>
           </li>
-          <li class="site-nav-item">
-            <a class="site-nav-item-link" href="#">Services</a>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#" >Services</a>
           </li>
-      </ul>
-      <form class="header-form" action="https://echo.htmlacademy.ru" method="get">
-        <input class="aid-department" type="search" name="search" placeholder="How can we help you?" aria-label="Search">
+        </ul>
+      </nav>
+      <form class="site-header__form" action="https://echo.htmlacademy.ru" method="get">
+        <input class="site-header__input" type="search" name="search" placeholder="How can we help you?" aria-label="Search">
       </form>
     </div>
   </header>
