--- a/index.html
+++ b/index.html
@@ -45,42 +45,44 @@
     <h1 class="visually-hidden">Apple watch landing page</h1>
     <!-- INTRO -->
     <section class="intro">
-      <div class="container intro-container">
-        <div class="site-content">
-          <h2 class="site-content-heading">Freedom calls.</h2>
-          <p class="site-content-text">Answer a call from your surfboard. Ask Siri to send a message. Stream your
+      <div class="container intro__container">
+        <div class="intro__content site-content">
+          <h2 class="site-content__heading">Freedom calls.</h2>
+          <p class="site-content__text">Answer a call from your surfboard. Ask Siri to send a message. Stream your
             favorite songs on your run. And do it all while leaving your phone behind. Introducing Apple Watch Series 3 with cellular. Now you have the freedom to go with just your watch.</p>
-          <a class="intro-button button" href="#">Watch the keynote</a>
+          <a class="site-content__button button" href="#">Watch the keynote</a>
         </div>
       </div>
     </section>
     <!-- FEATURES -->
     <section class="features">
       <h2 class="visually-hidden">Features</h2>
-      <div class="container features-container">
-        <div class="features-box">
-          <h3 class="features-heading">Know your runs. In and out.</h3>
-          <p class="features-text">Train smarter with more in-run stats. Want to compare a run to your last five? Just swipe left. Mark splits by selecting pause or using gestures, like tapping the screen or double-clicking the side button. And get a full post-run report, including elevation.</p>
-          <div class="dots-devider">
-            <span class="dots-devider-item"></span>
-            <span class="dots-devider-item"></span>
-            <span class="dots-devider-item"></span>
-          </div>
-        </div>
-        <div class="features-box">
-          <h3 class="features-heading">Run in good spirits.</h3>
-          <p class="features-text">A little support can go a long way. You can receive encouraging emoji from friends.And reminders triggered by your friends’ shared activity, the current weather, or your own history give you every reason to run.</p>
-          <div class="dots-devider">
-            <span class="dots-devider-item"></span>
-            <span class="dots-devider-item"></span>
-            <span class="dots-devider-item"></span>
-          </div>
-        </div>
-        <div class="features-box">
-          <h3 class="features-heading">Just do it. Sunday.</h3>
-          <p class="features-text">Run every Sunday and see how long you can keep your streak alive. Fuel your run with exclusive Nike+ Run Club playlists on Apple Music.</p>
-          <a class="features-button" href="#">Learn more</a>
-        </div>
+      <div class="container features__container">
+        <ul class="features__list">
+          <li class="features__item feature">
+            <h3 class="feature__heading">Know your runs. In and out.</h3>
+            <p class="feature__text">Train smarter with more in-run stats. Want to compare a run to your last five? Just swipe left. Mark splits by selecting pause or using gestures, like tapping the screen or double-clicking the side button. And get a full post-run report, including elevation.</p>
+            <div class="feature__bottom dots-devider">
+              <span class="dots-devider__item"></span>
+              <span class="dots-devider__item"></span>
+              <span class="dots-devider__item"></span>
+            </div>
+          </li>
+          <li class="features__item feature">
+            <h3 class="feature__heading">Run in good spirits.</h3>
+            <p class="feature__text">A little support can go a long way. You can receive encouraging emoji from friends.And reminders triggered by your friends’ shared activity, the current weather, or your own history give you every reason to run.</p>
+            <div class="feature__bottom dots-devider">
+              <span class="dots-devider__item"></span>
+              <span class="dots-devider__item"></span>
+              <span class="dots-devider__item"></span>
+            </div>
+          </li>
+          <li class="features__item feature">
+            <h3 class="feature__heading">Just do it. Sunday.</h3>
+            <p class="feature__text">Run every Sunday and see how long you can keep your streak alive. Fuel your run with exclusive Nike+ Run Club playlists on Apple Music.</p>
+            <a class="feature__button" href="#">Learn more</a>
+          </li>
+        </ul>
       </div>
     </section>
     <!-- INFO -->
