Add info section BEM technology

--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
     </section>
     <!-- INFO -->
     <section class="info">
-      <div class="container info-container">
-        <div class="site-content">
-          <h2 class="site-content-heading">Nike Sport Band.Light. Flexible.Breathable.</h2>
-          <p class="site-content-text">Made from the same durable, lightweight fluoroelastomer as the original Apple
+      <div class="container info__container">
+        <div class="info__content site-content">
+          <h2 class="site-content__heading">Nike Sport Band. Light. Flexible. Breathable.</h2>
+          <p class="site-content__text">Made from the same durable, lightweight fluoroelastomer as the original Apple
             Watch Sport Band, the Nike Sport Band reduces weight and improves ventilation via row after row of
             compression-molded perforations.</p>
-          <a class="info-button button" href="#">Buy now</a>
+          <a class="site-content__button button" href="#">Buy now</a>
         </div>
-        <img class="info-img" src="imgs/watch-in-hand.jpg" alt="watch-in-hand" width="400" height="600"
+        <img class="info__img" src="imgs/watch-in-hand.jpg" alt="watch-in-hand" width="400" height="600"
           srcset="imgs/watch-in-hand.jpg 1x, imgs/watch-in-hand@2x.jpg 2x" >
       </div>
     </section>
