--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
     </section>
     <!-- TAKE-CONTROL -->
     <section class="take-control">
-      <div class="take-control-wrapper">
-        <div class="container take-control-container">
-          <div class="site-content">
-            <h2 class="site-content-heading">Take control of your health. </h2>
-            <p class="site-content-text take-control-content-text">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help you take your run to the next level. You can even pair your watch wirelessly with compatible gymequipment.And it’s swimproof, so you can take a post-run dip in the pool.</p>
-            <a class="take-control-button button" href="#">Explore features</a>
+      <div class="take-control__wrapper">
+        <div class="container take-control__container">
+          <div class="take-control__content site-content">
+            <h2 class="site-content__heading">Take control of your health. </h2>
+            <p class="site-content__text site-content__text--white">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help you take your run to the next level. You can even pair your watch wirelessly with compatible gymequipment.And it’s swimproof, so you can take a post-run dip in the pool.</p>
+            <a class="site-content__button button" href="#">Explore features</a>
           </div>
         </div>
       </div>
